# ogdf_test

./: CMakeLists.txt  LayoutFromEdgeList_internal.cpp  LayoutFromEdgeList_internal.hpp  LayoutFromEdgeList_internal_JNI.cpp  README.org  de_unijena_bioinf_TreeVisualization_TreeVisualizer.h  ogdf_based_lib.cpp  ogdf_based_lib.h  ogdf_test.cpp  test_cpp-endpoint.cpp
.github/workflows/: build.yaml  build_nix.yaml  build_win.yaml  build_windows.yaml
binaries/: LayoutFromEdgeList_test
install_utils/: ldd_dependencies.sh  mac_ldd.sh
src/: CMakeLists.txt  LayoutFromEdgeList_internal.cpp  TreeVisualizer.java  de_unijena_bioinf_TreeVisualization_TreeVisualizer.h
tests/cpp_test/: test_cpp-endpoint.cpp
tests/java_test/: ForeignAPI.java  test_java-endpoint.java  test_java_endpoint.java
tmap/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
tmap/src/_tmap/: layout.cc  layout.hh
